# ch-toolkit

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  test-import-vcf.py
ch/resources/annotate_pd/: COSMIC.heme.myeloid.hotspot.w_truncating_counts.tsv  run_annotePD.R
ch/resources/sql/variantdb/seed/: chromosomes.sql  fp-filter-types.sql
ch/resources/vcf/: dummy.header
ch/utils/: csv_utils.py  database.py  fisher_exact_test.py
ch/vdbtools/: cli.py  dump.py  importer.py  process.py  register.py
ch/vdbtools/analysis/: ch.py
ch/vdbtools/handlers/: annotations.py  callers.py  samples.py  variants.py  vcf.py
ch/vdbtools/importers/: annotations.py  callers.py  samples.py  variants.py  vcf.py
chip/dbtools/: cli.py  initialize.py
chip/resources/sql/variantdb/: schema.sql
chip/resources/sql/variantdb/seed/: caller-filter-fypes.sql  chromosomes.sql  fp-filter-types.sql  lofreq-filter-types.sql  mutect-filter-types.sql  vardict-filter-types.sql
chip/resources/vcf/: dummy.header
chip/utils/: csv_utils.py  database.py  fisher_exact_test.py  logger.py  redis.py
chip/vdbtools/: cli.py  dump.py  importer.py  register.py
chip/vdbtools/analysis/: ch.py
chip/vdbtools/importers/: annotations.py  callers.py  samples.py  variants.py  vcf.py
chip/vdbtools/importers/caller/: base.py  lofreq.py
docs/: setup-redis-server.md
docs/development/: make-new-release.md
docs/extra-materials/: ch-pipeline-wgs.key
scripts/: bsub-launch-dump-variants-jobs.sh  bsub-launch-ingest-variants-jobs.sh  bsub-launch-register-sample-variants.sh  bsub-launch-register-variants-jobs.sh  bsub-redis-server-cmd.sh  dump-variants.sh  ingest-variants.sh  register-sample-variants.sh  register-variants.sh  run_annotePD.R  run_vep.sh
