[metadata]
name = ccdg-pipeline-toolkit
version = 0.0.1
author = Indraniel Das
author_email = idas@wustl.edu
description = A collection of tools/utilities for the CHIP pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kbolton-lab/chip-toolkit
project_urls =
    Bug Tracker = https://github.com/kbolton-lab/chip-toolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    click==8.0.3
    clint==0.5.1
    pysam==0.20.0
    vcfpy==0.13.6

[options.package_data]
* = chip/resources/*

#[options.packages.find]
#include = ccdg

[options.entry_points]
console_scripts =
    chip-variant-db = chip.vdbtools.cli:cli
#    job-mgr = chip.jobmgr.cli:cli
