[metadata]
name = ccdg-pipeline-toolkit
version = 0.0.1
author = Indraniel Das
author_email = idas@wustl.edu
description = A collection of tools/utilities for the CHIP pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kbolton-lab/chip-toolkit
project_urls =
    Bug Tracker = https://github.com/kbolton-lab/chip-toolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    click==8.0.3
    clint==0.5.1
    duckdb==1.0.0
    pandas==2.0.0
    pysam==0.21.0
    scipy==1.12.0
    llvmlite==0.42.0
    numba==0.59.0

[options.package_data]
* = ch/resources/*

#[options.packages.find]
#include = ccdg

[options.entry_points]
console_scripts =
    ch-toolkit = ch.vdbtools.cli:cli
#    job-mgr = chip.jobmgr.cli:cli
